style: ensure list items full width on mobile

--- a/style.css
+++ b/style.css
@@ -1643,6 +1643,7 @@ h2 {
   li {
     width: 100%;
     box-sizing: border-box;
+    display: block;
   }
 }
 
